--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,6 +1,8 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+:root * {
+  font-family: 'Poppins', sans-serif !important;
+  /* margin: 0 !important; */
+  /* padding: 0 !important; */
+/*   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
@@ -10,10 +12,21 @@
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale; */
 }
 
-a {
+body {
+  box-sizing: border-box !important;
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+p {
+  color: rgb(85, 85, 85) !important;
+}
+
+
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
@@ -65,4 +78,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
