--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,3 +1,11 @@
+section {
+  padding-top: 4vh;
+  height: 96vh;
+  margin: 0 10rem;
+  min-height: fit-content;
+}
+
+
 /* #root {
   max-width: 1280px;
   margin: 0 auto;
