--- a/portfolio/src/components/NavDesktop/navDesktopStyles.css
+++ b/portfolio/src/components/NavDesktop/navDesktopStyles.css
@@ -1,7 +1,10 @@
 .nav-desktop {
   display: block;
   background: #F5F5F5;
+  width: 470px !important;
 }
+
+
 
 @media (280px <=width <=1200px) {
   .nav-desktop {
