--- a/portfolio/src/components/NavMobile/navMobileStyles.css
+++ b/portfolio/src/components/NavMobile/navMobileStyles.css
@@ -2,6 +2,12 @@
   font-size: 1.5rem !important;
 }
 
+.burger-icon:hover{
+  color: rgb(22, 119, 255);
+}
+
+
+
 .drawer {
   background: #F5F5F5 !important;
 }
