--- a/portfolio/src/components/ProfileSection/profileSectionStyles.css
+++ b/portfolio/src/components/ProfileSection/profileSectionStyles.css
@@ -87,7 +87,7 @@
 .linkedin_icon, .github_icon {
   cursor: pointer;
   height: 2rem;
-  border-radius: 50%
+  border-radius: 50%;
 }
 
 .linkedin_icon:hover, .github_icon:hover {
