--- a/portfolio/src/components/FooterContent/footerContentStyles.css
+++ b/portfolio/src/components/FooterContent/footerContentStyles.css
@@ -2,10 +2,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 2.2rem;
 }
 
 .nav-footer {
   display: block;
   background: #F5F5F5;
-  width: 470px !important;
+  width: 640px !important;
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
+}
+
+.footer-p1{
+  font-size: 1rem;
 }
