--- a/portfolio/src/components/HeaderContent/headerContentStyles.css
+++ b/portfolio/src/components/HeaderContent/headerContentStyles.css
@@ -9,3 +9,26 @@
 .logo {
   font-size: 2rem;
 }
+
+@media (320px <=width <=480px) {
+  .logo {
+    font-size: 1.5rem;
+    width: 42%;
+    white-space: nowrap;
+    overflow: hidden;
+    /* text-overflow: ellipsis; */
+  }
+  .header-container {
+    justify-content: space-between;
+  }
+}
+
+/* @media (480px <=width <=576px) {}
+
+@media (576px <=width <=768px) {} */
+
+/* @media (768px <= width <=1024px) {}
+
+@media (1024px <= width <=1200px) {}
+
+@media (1200px <= width <=1440px) {} */
