--- a/portfolio/src/components/NavMobile/navMobileStyles.css
+++ b/portfolio/src/components/NavMobile/navMobileStyles.css
@@ -1,4 +1,5 @@
 .burger-icon {
+  display: block;
   font-size: 1.5rem !important;
 }
 
@@ -24,7 +25,23 @@
 
 @media (280px <=width <=1200px) {
   .mobile-menu-icon {
-    display: block;
+    display: flex;
     cursor: pointer;
   }
 }
+
+@media (320px <=width <=480px) {
+  .burger-icon {
+    font-size: 1.8rem !important;
+  }
+}
+
+/* @media (480px <=width <=576px) {}
+
+@media (576px <=width <=768px) {} */
+
+/* @media (768px <= width <=1024px) {}
+
+@media (1024px <= width <=1200px) {}
+
+@media (1200px <= width <=1440px) {} */
