--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -11,6 +11,22 @@ p {
 }
 
 
+@media (320px <=width <=480px) {
+  section {
+    margin: 0 5% ;
+  }
+}
+
+/* @media (480px <=width <=576px) {}
+
+@media (576px <=width <=768px) {} */
+
+/* @media (768px <= width <=1024px) {}
+
+@media (1024px <= width <=1200px) {}
+
+@media (1200px <= width <=1440px) {} */
+
 /* #root {
   max-width: 1280px;
   margin: 0 auto;
