--- a/portfolio/src/components/AboutSection/aboutSectionStyles.css
+++ b/portfolio/src/components/AboutSection/aboutSectionStyles.css
@@ -38,8 +38,8 @@
 
 .about-details-container {
   display: flex;
-  justify-content: center;
   flex-direction: column;
+  justify-content: center;
 }
 
 .details-container {
@@ -84,3 +84,44 @@
   height: 2.2rem;
 }
 
+@media (320px <=width <=480px) {
+  #about {
+    margin-top: 7rem;
+  }
+  .about-section-flex-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .about-img-container {
+    height: 46vh;
+    width: 46vw;
+  }
+  .about-img {
+    width: 100%;
+  }
+
+  .arrow-icon {
+    display: none;
+  }
+
+  .title__about {
+    font-size: 2rem;
+    margin-top: 0;
+  }
+
+  .about-section-flex-container {
+    gap: 0rem;
+  }
+}
+
+@media (480px <=width <=576px) {}
+
+@media (576px <=width <=768px) {}
+
+/* @media (768px <= width <=1024px) {}
+
+@media (1024px <= width <=1200px) {}
+
+@media (1200px <= width <=1440px) {} */
