--- a/portfolio/src/components/ContactSection/contactSectionStyles.css
+++ b/portfolio/src/components/ContactSection/contactSectionStyles.css
@@ -54,3 +54,28 @@
 .linkedin-icon_img {
   height: 2rem;
 }
+
+@media (320px <=width <=480px) {
+  #contact {
+    margin-top: 30rem;
+  }
+  .contact-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0rem;
+    font-size: medium;
+    margin: 2rem 0;
+    padding: 0.5rem;
+  }
+}
+
+/* @media (480px <=width <=576px) {}
+
+@media (576px <=width <=768px) {} */
+
+/* @media (768px <= width <=1024px) {}
+
+@media (1024px <= width <=1200px) {}
+
+@media (1200px <= width <=1440px) {} */
