--- a/portfolio/src/components/ProjectsSection/projectsSectionStyles.css
+++ b/portfolio/src/components/ProjectsSection/projectsSectionStyles.css
@@ -24,3 +24,21 @@
   display: flex !important;
   justify-content: space-around !important;
 }
+
+
+@media (320px <=width <=480px) {
+  #projects {
+    margin-top: 45rem;
+  }
+  
+}
+
+/* @media (480px <=width <=576px) {}
+
+@media (576px <=width <=768px) {} */
+
+/* @media (768px <= width <=1024px) {}
+
+@media (1024px <= width <=1200px) {}
+
+@media (1200px <= width <=1440px) {} */
