--- a/portfolio/src/components/HeaderContent/headerContentStyles.css
+++ b/portfolio/src/components/HeaderContent/headerContentStyles.css
@@ -18,14 +18,27 @@
     overflow: hidden;
     /* text-overflow: ellipsis; */
   }
+
   .header-container {
     justify-content: space-between;
   }
 }
 
-/* @media (480px <=width <=576px) {}
+@media (480px <=width <=576px) {
+  .logo {
+    font-size: 1.5rem;
+    width: 42%;
+    white-space: nowrap;
+    overflow: hidden;
+    /* text-overflow: ellipsis; */
+  }
 
-@media (576px <=width <=768px) {} */
+  .header-container {
+    justify-content: space-between;
+  }
+}
+
+/* @media (576px <=width <=768px) {}  */
 
 /* @media (768px <= width <=1024px) {}
 
