--- a/portfolio/src/components/ProjectsSection/projectsSectionStyles.css
+++ b/portfolio/src/components/ProjectsSection/projectsSectionStyles.css
@@ -30,12 +30,16 @@
   #projects {
     margin-top: 45rem;
   }
-  
+
 }
 
-/* @media (480px <=width <=576px) {}
+@media (480px <=width <=576px) {
+  #projects {
+    margin-top: 45rem;
+  }
+}
 
-@media (576px <=width <=768px) {} */
+/* @media (576px <=width <=768px) {}  */
 
 /* @media (768px <= width <=1024px) {}
 
