--- a/portfolio/src/components/ProjectsSection/projectsSectionStyles.css
+++ b/portfolio/src/components/ProjectsSection/projectsSectionStyles.css
@@ -28,21 +28,29 @@
 
 @media (320px <=width <=480px) {
   #projects {
-    margin-top: 45rem;
+    margin-top: 40rem;
   }
 
 }
 
 @media (480px <=width <=576px) {
   #projects {
-    margin-top: 45rem;
+    margin-top: 37rem;
   }
 }
 
-/* @media (576px <=width <=768px) {}  */
+ @media (576px <=width <=768px) {
+  #projects {
+    margin-top: 8rem;
+  }
+ }  
 
-/* @media (768px <= width <=1024px) {}
+ @media (768px <= width <=1024px) {
+  #projects {
+    margin-top: 6rem;
+  }
+ }
 
-@media (1024px <= width <=1200px) {}
+/* @media (1024px <= width <=1200px) {}
 
-@media (1200px <= width <=1440px) {} */
+@media (1200px <= width <=1440px) {}  */
