--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -29,11 +29,19 @@ p {
   }
  }  
 
-/* @media (768px <= width <=1024px) {}
+ @media (768px <= width <=1024px) {
+  section {
+    margin: 0 5% ;
+  }
+ }
 
-@media (1024px <= width <=1200px) {}
+@media (1024px <= width <=1200px) {
+  section {
+    margin: 0 5% ;
+  }
+}
 
-@media (1200px <= width <=1440px) {} */
+/* @media (1200px <= width <=1440px) {}  */
 
 /* #root {
   max-width: 1280px;
