--- a/portfolio/src/components/ProfileSection/profileSectionStyles.css
+++ b/portfolio/src/components/ProfileSection/profileSectionStyles.css
@@ -134,12 +134,37 @@
   }
 
   .section-profile_photo-container {
-    width: 46vw;
-    height: 46vw;
+    width: 41vw;
+    height: 41vw;
   }
 
   .title {
-    font-size: 1.7rem;
+    font-size: 1.4rem;
+  }
+
+  .section-profile_info-container__p2 {
+    font-size: 1.1rem;
+  }
+}
+
+@media (576px <=width <=768px) {
+  #profile {
+    height: 80vh;
+  }
+
+  .section-profile_flex-container {
+    gap: 2rem;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .section-profile_photo-container {
+    width: 40vw;
+    height: 40vw;
+  }
+
+  .title {
+    font-size: 1.6rem;
   }
 
   .section-profile_info-container__p2 {
@@ -147,10 +172,31 @@
   }
 }
 
-/* @media (576px <=width <=768px) {}  */
+ @media (768px <= width <=1024px) {
+  #profile {
+    height: 80vh;
+  }
 
-/* @media (768px <= width <=1024px) {}
+  .section-profile_flex-container {
+    gap: 2rem;
+    flex-direction: column;
+    align-items: center;
+  }
 
-@media (1024px <= width <=1200px) {}
+  .section-profile_photo-container {
+    width: 42vw;
+    height: 42vw;
+  }
 
-@media (1200px <= width <=1440px) {} */
+  .title {
+    font-size: 1.8rem;
+  }
+
+  .section-profile_info-container__p2 {
+    font-size: 1.5rem;
+  }
+ }
+
+/* @media (1024px <= width <=1200px) {} */
+
+/* @media (1200px <= width <=1440px) {}  */
