--- a/portfolio/src/layouts/LayoutPortfolio/layoutPortfolioStyles.css
+++ b/portfolio/src/layouts/LayoutPortfolio/layoutPortfolioStyles.css
@@ -1,9 +1,9 @@
 .app-layout-container {
-  min-height: 100vh;
+  min-height: 100vh !important;
   /* background-color: crimson; */
 }
 
 .app-header-container{
   height: 17vh !important;
-  background-color: #F5F5F5;
+  background-color: #F5F5F5 !important;
 }
