--- a/portfolio/src/layouts/LayoutPortfolio/layoutPortfolioStyles.css
+++ b/portfolio/src/layouts/LayoutPortfolio/layoutPortfolioStyles.css
@@ -3,7 +3,7 @@
   /* background-color: crimson; */
 }
 
-.app-header-container{
+.ant-layout-header {
   height: 17vh !important;
-  background-color: #F5F5F5 !important;
+  background-color: #f5f5f5 !important;
 }
