--- a/portfolio/src/layouts/LayoutPortfolio/layoutPortfolioStyles.css
+++ b/portfolio/src/layouts/LayoutPortfolio/layoutPortfolioStyles.css
@@ -1,9 +1,8 @@
-.app-layout-container {
+.layout-container {
   min-height: 100vh !important;
-  /* background-color: crimson; */
 }
 
-.ant-layout-header {
+.layout-container .layout_header-container {
   height: 17vh !important;
   background-color: #f5f5f5 !important;
 }
