--- a/portfolio/src/components/HeaderContent/headerContentStyles.css
+++ b/portfolio/src/components/HeaderContent/headerContentStyles.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  height: 17vh;
+  height: 100%;
   background: #F5F5F5;
 }
 
@@ -15,23 +15,15 @@
     font-size: 1.5rem;
   }
 
-  /* .header-container {
+  .header-container {
     justify-content: space-between;
-  } */
+  }
 }
 
 @media (480px <=width <=576px) {
   .logo {
     font-size: 1.5rem;
-    /* width: 42%;
-    white-space: nowrap;
-    overflow: hidden; */
-    /* text-overflow: ellipsis; */
   }
-
-  /* .header-container {
-    justify-content: space-between;
-  } */
 }
 
 /* @media (576px <=width <=768px) {}  */
