--- a/portfolio/src/components/HeaderContent/headerContentStyles.css
+++ b/portfolio/src/components/HeaderContent/headerContentStyles.css
@@ -12,7 +12,7 @@
 
 @media (320px <=width <=480px) {
   .logo {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
   }
 
   .header-container {
@@ -22,14 +22,26 @@
 
 @media (480px <=width <=576px) {
   .logo {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
   }
 }
 
-/* @media (576px <=width <=768px) {}  */
+@media (576px <=width <=768px) {
+  .logo {
+    font-size: 1.6rem;
+  }
+}  
 
-/* @media (768px <= width <=1024px) {}
+@media (768px <= width <=1024px) {
+  .logo {
+    font-size: 1.7rem;
+  }
+}
 
-@media (1024px <= width <=1200px) {}
+@media (1024px <= width <=1200px) {
+  .logo {
+    font-size: 1.8rem;
+  }
+}
 
-@media (1200px <= width <=1440px) {} */
+/*@media (1200px <= width <=1440px) {} */
