--- a/portfolio/src/components/ProfileSection/profileSectionStyles.css
+++ b/portfolio/src/components/ProfileSection/profileSectionStyles.css
@@ -90,11 +90,13 @@
   cursor: pointer;
   height: 2rem;
   border-radius: 50%;
+  transition: transform 0.3s ease;
 }
 
 .linkedin_icon:hover,
 .github_icon:hover {
   box-shadow: 0px 4px 24px 0 rgba(85, 85, 85, 0.7);
+  transform: translateY(4px);
 }
 
 
