--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -5,6 +5,13 @@ section {
   min-height: fit-content;
 }
 
+section:not(#profile) {
+  animation: reveal ease-in-out forwards;
+  animation-timeline: view();
+  animation-range: entry 5% cover 51%;
+}
+
+
 p {
   margin: 0;
   padding: 0;
@@ -13,6 +20,18 @@ p {
 
 html {
   scroll-behavior: smooth;
+}
+
+@keyframes reveal {
+  from {
+    opacity: 0;
+    transform: scale(.5);
+  }
+
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 
 @media (320px <=width <=480px) {
