Add drop shadow to images

--- a/portfolio/src/components/AboutSection/aboutSectionStyles.css
+++ b/portfolio/src/components/AboutSection/aboutSectionStyles.css
@@ -36,6 +36,7 @@
 .about-img {
   width: 100%;
   border-radius: 2rem;
+  filter: drop-shadow(0 2px 3px rgb(85, 85, 85));
 }
 
 .about-details-container {
