--- a/portfolio/src/components/AboutSection/aboutSectionStyles.css
+++ b/portfolio/src/components/AboutSection/aboutSectionStyles.css
@@ -85,7 +85,7 @@
   right: -5rem;
   bottom: 2.5rem;
   /*transition: transform 0.3s ease;*/
-  animation: moveArrowBtn 1s 2s infinite ease-in-out alternate;
+  animation: moveArrowBtn 1s 2s infinite ease-in alternate;
 }
 
 .arrow-icon:hover {
@@ -99,13 +99,13 @@
 @keyframes moveArrowBtn {
   0% {
     transform: translateY(0);
-    opacity: 1;
+    opacity: .8;
     scale: 1.1;
   }
 
   100% {
     transform: translateY(14.5px);
-    opacity: 0.7;
+    opacity: 1;
   }
 }
 
