--- a/portfolio/src/components/NavDesktop/navDesktopStyles.css
+++ b/portfolio/src/components/NavDesktop/navDesktopStyles.css
@@ -2,9 +2,35 @@
   display: block;
   background: #F5F5F5;
   width: 470px !important;
+  transition: background ease-in-out 0.6s;
+}
+
+.nav-desktop__dark-mode {
+  background: #000C17 !important;
+  transition: background ease-in-out 0.6s;
+  /* color: #F5F5F5 !important; */
+}
+
+/* @keyframes bgDarkMode {
+  from {
+    background: #fff;
+  }
+
+  to {
+    background: #000C17;
+  }
 }
 
 
+@keyframes bgLightMode {
+  from {
+    background: #000C17;
+  }
+
+  to {
+    background: #fff;
+  }
+} */
 
 @media (280px <=width <=1200px) {
   .nav-desktop {
