--- a/portfolio/src/components/ProjectCard/projectCardStyles.css
+++ b/portfolio/src/components/ProjectCard/projectCardStyles.css
@@ -5,6 +5,16 @@
   border-color: rgb(163, 163, 163);
   background-color: rgb(245, 245, 245);
   text-align: center;
+  color: #1E1E1E;
+  transition: border border-color color  background-color ease-in-out 0.6s;
+}
+
+.project-card__dark-mode {
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: #4D5359;
+  background-color: #000C17;
+  color: #f9f9f9; 
+  transition: border border-color color  background-color ease-in-out 0.6s;
 }
 
 
@@ -27,10 +37,17 @@
 }
 
 
-.ant-card-actions {
+.project-card .ant-card-actions {
   border-radius: 0 0 2rem 2rem !important;
   background-color: rgb(245, 245, 245) !important;
+  transition: background-color ease-in-out 0.6s;
+}
 
+.project-card__dark-mode .ant-card-actions {
+  border-radius: 0 0 2rem 2rem !important;
+  border-top: 2px solid #4D5359;
+  background-color: #000C17 !important;
+  transition: background-color ease-in-out 0.6s;
 }
 
 .project-github-btn,
