--- a/portfolio/src/layouts/LayoutPortfolio/layoutPortfolioStyles.css
+++ b/portfolio/src/layouts/LayoutPortfolio/layoutPortfolioStyles.css
@@ -4,11 +4,10 @@
   transition: background ease-in-out 0.6s !important;
 }
 
-.app-layout .ant-layout-header {
+.ant-layout-header {
   height: 17vh !important;
-  background: #F5F5F5 !important;
-  margin: 0 !important;
   padding: 0 !important;
+  background: #F5F5F5 !important;
 }
 
 .app-layout__dark-mode {
