--- a/portfolio/src/components/HeaderContent/headerContentStyles.css
+++ b/portfolio/src/components/HeaderContent/headerContentStyles.css
@@ -3,7 +3,8 @@
   justify-content: space-around;
   align-items: center;
   height: 100%;
-  background: #F5F5F5;
+  width: 100%;
+  background: #f5f5f5;
   transition: background ease-in-out 0.6s;
 }
 
