--- a/portfolio/src/layouts/LayoutPortfolio/layoutPortfolioStyles.css
+++ b/portfolio/src/layouts/LayoutPortfolio/layoutPortfolioStyles.css
@@ -4,8 +4,9 @@
   transition: background ease-in-out 0.6s !important;
 }
 
-.ant-layout-header {
+.app-header {
   height: 17vh !important;
+  width: 100% !important;
   padding: 0 !important;
   background: #F5F5F5 !important;
 }
