--- a/portfolio/src/components/HeaderContent/headerContentStyles.css
+++ b/portfolio/src/components/HeaderContent/headerContentStyles.css
@@ -1,4 +1,4 @@
-.header-container {
+.app-layout .app-header .header-container {
   display: flex;
   justify-content: space-around;
   align-items: center;
