--- a/portfolio/src/layouts/LayoutPortfolio/layoutPortfolioStyles.css
+++ b/portfolio/src/layouts/LayoutPortfolio/layoutPortfolioStyles.css
@@ -4,7 +4,7 @@
   transition: background ease-in-out 0.6s !important;
 }
 
-.app-header {
+.app-layout .app-header {
   height: 17vh !important;
   width: 100% !important;
   padding: 0 !important;
