--- a/portfolio/src/components/HeaderContent/headerContentStyles.css
+++ b/portfolio/src/components/HeaderContent/headerContentStyles.css
@@ -1,9 +1,10 @@
-.app-layout .app-header .header-container {
+.header-container {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  height: 100%;
+  height: 100%; 
   width: 100%;
+    
   background: #f5f5f5;
   transition: background ease-in-out 0.6s;
 }
