--- a/portfolio/src/layouts/LayoutPortfolio/layoutPortfolioStyles.css
+++ b/portfolio/src/layouts/LayoutPortfolio/layoutPortfolioStyles.css
@@ -7,8 +7,10 @@
 .app-layout .app-header {
   height: 17vh !important;
   width: 100% !important;
+  margin: 0 !important;
   padding: 0 !important;
-  background: #F5F5F5 !important;
+  box-sizing: border-box;
+  background: #f5f5f5 !important;
 }
 
 .app-layout__dark-mode {
