--- a/portfolio/src/layouts/LayoutPortfolio/layoutPortfolioStyles.css
+++ b/portfolio/src/layouts/LayoutPortfolio/layoutPortfolioStyles.css
@@ -4,12 +4,8 @@
   transition: background ease-in-out 0.6s !important;
 }
 
-.app-layout .app-header {
+.ant-layout .ant-layout-header {
   height: 17vh !important;
-  width: 100% !important;
-  margin: 0 !important;
-  padding: 0 !important;
-  box-sizing: border-box;
   background: #f5f5f5 !important;
 }
 
