--- a/portfolio/src/layouts/LayoutPortfolio/layoutPortfolioStyles.css
+++ b/portfolio/src/layouts/LayoutPortfolio/layoutPortfolioStyles.css
@@ -4,10 +4,10 @@
   transition: background ease-in-out 0.6s !important;
 }
 
-.ant-layout>.ant-layout-header {
-  min-height: 17vh !important;
+.app-layout .app-header {
+  height: 17vh !important;
   background: #f5f5f5 !important;
-  padding: 0 0 !important;
+  padding: 0 !important;
 }
 
 .app-layout__dark-mode {
