--- a/portfolio/src/layouts/LayoutPortfolio/layoutPortfolioStyles.css
+++ b/portfolio/src/layouts/LayoutPortfolio/layoutPortfolioStyles.css
@@ -5,7 +5,7 @@
 }
 
 .app-layout .app-header {
-  height: 17vh !important;
+  /* height: 17vh !important; */
   background: #f5f5f5 !important;
   padding: 0 !important;
 }
