Fix header bug with styles in line

--- a/portfolio/src/layouts/LayoutPortfolio/layoutPortfolioStyles.css
+++ b/portfolio/src/layouts/LayoutPortfolio/layoutPortfolioStyles.css
@@ -8,6 +8,7 @@
   /* height: 17vh !important; */
   background: #f5f5f5 !important;
   padding: 0 !important;
+  transition: background ease-in-out 0.6s !important;
 }
 
 .app-layout__dark-mode {
