--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -26,6 +26,25 @@ p {
 }
 
 
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f5f5f5; /* Fondo claro del track */ 
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(transparent, #A6D8FF);
+  border-radius: 12px; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(transparent, #7BB9FF);
+}
+
+
+
 /* a {
   font-weight: 500;
   color: #646cff;
